# LDR_ZephyrOS

./: .buildinfo  .gitignore  .gitmodules  README.md  genindex.html  index.html  my-first-post.html  objects.inv  platformio.ini  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  my-first-post.doctree
ADD_TASKS_TEST/include/: hc_sr04.hpp  servo.hpp
ADD_TASKS_TEST/src/: hc_sr04.cpp  main.cpp  servo.cpp
ADD_TASKS_TEST/zephyr/: CMakeLists.txt  prj.conf
ADD_TASKS_TEST/zephyr/boards/: stm32f429i_disc1.overlay
Complete_ProjectFolder/include/: hc_sr04.hpp
Complete_ProjectFolder/src/: main.cpp
Complete_ProjectFolder/zephyr/: CMakeLists.txt
ModuleTest/include/: bme680.hpp
ModuleTest/src/: main.cpp
ModuleTest/zephyr/: CMakeLists.txt  prj.conf
ModuleTest/zephyr/boards/: stm32f429i_disc1.overlay
ModuleTest/zephyr/modules/hc_sr04/drivers/sensor/hc_sr04/: hc_sr04.c  hc_sr04.h
SERVO OK/include/: servo.hpp
SERVO OK/zephyr/: prj.conf
SERVO_TEST/src/: main.c
SERVO_TEST/zephyr/: prj.conf
Sample_Segger/zephyr/: CMakeLists.txt
Samples/Sample/: platformio.ini
Samples/Sample_SeggerSystemView/: platformio.ini
Samples/include/: servo.hpp
Samples/src/: bme680.cpp  main.cpp  servo.cpp
Samples/zephyr/: CMakeLists.txt  prj.conf
WithGUINew/WithGUINew/: platformio.ini
_sources/: index.rst.txt  my-first-post.md.txt
doc/source/: conf.py  my-first-post.md
include/: hcsr04.hpp  servo.hpp.old
src/: hcsr04.cpp  main.cpp  servo.cpp
zephyr/: prj.conf
zephyr/boards/: stm32f429i_disc1.conf  stm32f429i_disc1.overlay
(+22 files in other folders)
